fix: improve guides visibility

--- a/src/sass/colorpicker.scss
+++ b/src/sass/colorpicker.scss
@@ -63,6 +63,7 @@
     height: 5px;
     width: 5px;
     border: 1px solid #000;
+    box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.33);
     @include borderRadius(5px);
     position: absolute;
     top: 0;
@@ -101,8 +102,8 @@
 .colorpicker-alpha .colorpicker-guide {
   display: block;
   height: 1px;
-  background: #000;
-  border-top: 1px solid #fff;
+  background: rgba(0, 0, 0, 0.85);
+  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.85);
   position: absolute;
   top: 0;
   left: 0;
